--- a/package.json
+++ b/package.json
@@ -4,17 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Rohit, Anurag",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.1.1",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "nodemon": "^3.0.3",
-    "socket.io": "^4.7.4",
-    "uuid": "^9.0.1"
+    "nodemon": "^3.0.3"
   }
 }
